# FinAudit-Graph

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
apps/: streamlit_app.py
archive/: README.md
archive/labelstudio_exports/: project-36-at-2026-06-03-12-25-45eec0b7.json
archive/legacy_lora_export/: audit_risk_sft_from_labelstudio_80.jsonl  finaudit_lora_demo.yaml  trainer_log.jsonl
archive/legacy_outputs/: audit_subject_audit_report.docx  audit_subject_audit_report.md  huachen_intelligent_equipment_audit_report_legacy.docx  huachen_intelligent_equipment_audit_report_legacy.md  huachen_intelligent_equipment_audit_report_old.docx  huachen_intelligent_equipment_audit_report_old.md
archive/planning_docs/: finaudit_graph_7_day_execution_plan.docx  generate_finaudit_plan_docx.py  intelligent_audit_plan.docx
config/: .env.example
data/: eval_dataset.json
data/demo_inputs/: injection_case.txt  sample_financial_data.csv  sample_financial_data.xlsx
data/graph/: init_neo4j.cypher  related_parties.json
data/lora_adapter/: adapter_config.json
data/rag/: audit_standards.json  vector_store.json
docs/defense/: finaudit_graph_defense_presentation.pptx  finaudit_graph_speaker_notes.md  full_flow_project_evidence.md
integrations/n8n/: finaudit_email_review_workflow.json
model_artifacts/lora_adapter/: artifact_summary.json
showcase/: eval_dataset.json  generate_realistic_business_data.py
showcase/demo_inputs/: realistic_business_financials.xlsx  sample_financial_data.xlsx  test_audit.txt
tests/: test_api.py  test_workflow.py
(+84 files in other folders)
