[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finaudit-graph"
version = "0.1.0"
description = "End-to-end LLM agent system for financial auditing and compliance review."
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[project.scripts]
finaudit-graph = "finaudit_graph.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

